--- a/notebook/CCS_UNet.ipynb
+++ b/notebook/CCS_UNet.ipynb
@@ -8,7 +8,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qJUHWOd2ZVr_",
-        "outputId": "92ccbe0f-093f-4434-c00b-84029c9e12e7"
+        "outputId": "14abdc52-3411-4526-eaea-fb90844ba513"
       },
       "outputs": [
         {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-GlK-zHaGpA",
-        "outputId": "522c1dd0-f95c-4011-9548-33967818260f"
+        "outputId": "9f5791a3-c69b-4958-d097-12ef286d907a"
       },
       "outputs": [
         {
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m2mn3SHajpxM",
-        "outputId": "23085083-029b-45dc-dcb6-d9c68a05ee09"
+        "outputId": "b7f90786-8525-4539-a907-3251f5d238da"
       },
       "outputs": [
         {
@@ -5121,7 +5121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YLG1sSfHrF6L",
-        "outputId": "60512205-340f-44d1-9f38-11f3fe6d0b72"
+        "outputId": "e1e3bade-96c8-4f06-9a30-df2ce531cee7"
       },
       "outputs": [
         {
@@ -5595,7 +5595,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BGAupy2Sseqs",
-        "outputId": "aa9ce4e8-e1e0-40d2-e0f5-9019c4fdd7a5"
+        "outputId": "eb3955b6-358c-48b9-b3d0-3880ab70ee25"
       },
       "outputs": [
         {
@@ -5697,7 +5697,7 @@
       "source": [
         "device_cuda = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model=UNet(in_channels = 9,out_channels = 24)\n",
-        "train_model(model, train_data_loader, val_data_loader, device=device_cuda,save_dir = \"/content/drive/My Drive/inpainting_model_UNET\")"
+        "train_model(model, train_data_loader, val_data_loader, device=device_cuda,save_dir = \"/content/drive/My Drive/UNets\")"
       ]
     },
     {
@@ -5745,7 +5745,7 @@
       "source": [
         "epoch = 60\n",
         "model=UNet(in_channels = 9,out_channels = 24)\n",
-        "model_path = f\"/content/drive/My Drive/inpainting_model_UNET/model_pressureepoch_{epoch}.pth\"  # Please specify the path to your saved model\n",
+        "model_path = f\"/content/drive/My Drive/UNets/model_pressureepoch_{epoch}.pth\"\n",
         "visualize_prediction( \"/content/unzipped_files/CCS_data/val_data/\", model_path,device_cuda,target_var=\"pressure_buildup\",dl_model=model)"
       ]
     }
